# bytestream-encoder

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
database/: init.sql
docker/: docker-compose.yml
src/: main.cpp
